--- a/escom-bpm-web/src/main/webapp/view/common/item-select-btn.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/item-select-btn.xhtml
@@ -4,7 +4,7 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     
-    <h:panelGroup  styleClass="ui-grid-col-12">
+    <h:panelGroup  styleClass="ui-grid-col-12 col-padding">
         <p:commandButton id="#{_itemPanel}_btn" 
                          process="#{_itemPanel}_btn"
                          actionListener="#{_selectorBean.onOneSelectItem()}" style="display: none;">
