--- a/escom-bpm-web/src/main/webapp/view/partners/partner-сard.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/partners/partner-сard.xhtml
@@ -81,7 +81,7 @@
             <ui:include src="/view/common/dict-item-groups.xhtml" >
                 <ui:param name="_groups"    value="#{_bean.editedItem.partnersGroupsList}" />    
                 <ui:param name="_selectorBean" value="#{partnersGroupsBean}" />
-                <ui:param name="_showOwner" value="#{true}" />
+                <ui:param name="_showOwner" value="#{false}" />
             </ui:include>
         </p:tab>
 
