--- a/escom-bpm-web/src/main/webapp/view/users/user-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/users/user-explorer.xhtml
@@ -17,11 +17,11 @@
     <ui:param name="_selectorHeader" value="#{explorerBean.getLabelFromBundle('UsersSelector')}"/>
     <ui:param name="_explorerHeader" value="#{explorerBean.getLabelFromBundle('Users')}"/>
         
-    <ui:define name="specDetailColumns" rendered="#{explorerBean.isNowShowDetail()}">
-        <p:column headerText="#{bundle.Login}" sortBy="#{item.login}">
+    <ui:define name="specDetailColumns" >
+        <p:column headerText="#{bundle.Login}" sortBy="#{item.login}" rendered="#{explorerBean.isNowShowDetail()}">
             #{item.login}
         </p:column>
-        <p:column headerText="#{bundle.EMail}" sortBy="#{item.email}">
+        <p:column headerText="#{bundle.EMail}" sortBy="#{item.email}" rendered="#{explorerBean.isNowShowDetail()}">
             #{item.email}
         </p:column> 
     </ui:define>
