--- a/escom-bpm-web/src/main/webapp/view/admin/users/change-password.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/users/change-password.xhtml
@@ -19,11 +19,11 @@
             <pe:layout fullPage="true">
                 <pe:layoutPane position="center" resizable="false">
 
-                    <p:panelGrid columns="2" columnClasses="ui-grid-col-4, ui-grid-col-8" styleClass="ui-grid-col-12"
+                    <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-4, ui-grid-col-8" styleClass="ui-grid-col-12"
                                  rendered="#{!sessionBean.currentUser.LDAPname.isEmpty()}">
                         <p:outputLabel value="#{bundle.CurrentPassword}:"/>
                         <h:panelGrid columns="1" style="width: 100%;" >
-                            <p:password id="curPassword" value="#{userBean.model.oldPassword}"
+                            <p:password id="curPassword" value="#{userSettingsBean.oldPassword}"
                                         required="true" requiredMessage="#{bundle.Field} [#{bundle.CurrentPassword}] #{bundle.MustBeFilled}"
                                         style="width: 100%;"/>
                             <p:message for="curPassword"/>
@@ -31,7 +31,7 @@
 
                         <p:outputLabel value="#{bundle.NewPassword}:"/>
                         <h:panelGrid columns="1" style="width: 100%;">
-                            <p:password value="#{userBean.model.newPassword}" id="newPassword"
+                            <p:password value="#{userSettingsBean.newPassword}" id="newPassword"
                                         feedback="true"
                                         maxlength="20" 
                                         required="true" requiredMessage="#{bundle.Field} [#{bundle.NewPassword}] #{bundle.MustBeFilled}"
@@ -41,7 +41,7 @@
 
                         <p:outputLabel value="#{bundle.RepeatPassword}:"/>
                         <h:panelGrid columns="1" style="width: 100%;">
-                            <p:password value="#{userBean.model.repeatePassword}" id="repeatePassword"
+                            <p:password value="#{userSettingsBean.repeatePassword}" id="repeatePassword"
                                         maxlength="20"
                                         required="true" requiredMessage="#{bundle.Field} [#{bundle.RepeatPassword}] #{bundle.MustBeFilled}"
                                         style="width: 100%;"/>
@@ -50,7 +50,7 @@
                         <p:spacer />
                         <p:commandButton icon="ui-icon-circle-check" value="#{bundle.Make}" 
                                          update="changePwlFRM" style="float: right;"
-                                         actionListener="#{userBean.changePassword()}"/>
+                                         actionListener="#{userSettingsBean.onChangePassword()}"/>
                     </p:panelGrid>
                 </pe:layoutPane>
             </pe:layout>
