--- a/escom-bpm-web/src/main/webapp/view/partners/partner-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/partners/partner-explorer.xhtml
@@ -32,7 +32,7 @@
         <p:outputLabel value="#{bundle.Code}"/>        
         <p:inputText id="codeSearche" title="#{bundle.HelpSearcheContext}"
                      styleClass="widthMin100"
-                     value="#{partnersBean.codeSearche}"
+                     value="#{explorerBean.model.codeSearche}"
                      onkeypress="keyPress();">
         </p:inputText>
     </ui:define>
