--- a/escom-bpm-web/src/main/webapp/view/templ/expl/expl-southpane.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/expl/expl-southpane.xhtml
@@ -18,7 +18,7 @@
                     <p:commandButton id="btnClose" icon="ui-icon-close" value="#{bundle.Close}" title="#{bundle.Close}"
                                      styleClass="without-spaces"
                                      rendered="#{explorerBean.selectorViewMode}"
-                                     action="#{_detailBean.onClose()}">
+                                     action="#{explorerBean.onClose()}">
                     </p:commandButton>
                 </h:panelGroup>
                 <h:panelGroup styleClass="without-spaces pull-right">
