--- a/escom-bpm-web/src/main/webapp/view/common/dict-rights.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/dict-rights.xhtml
@@ -12,16 +12,14 @@
         }
     </style>    
     
-    <p:tab title="#{bundle.Rights}" rendered="#{_bean.editedItem != null}">
-     
-        <h:panelGrid columns="2" styleClass="ui-panelgrid-blank">
-            <p:selectBooleanCheckbox value="#{_bean.editedItem.inherits}"                                  
-                                     disabled="#{_bean.isReadOnly() || !_bean.isHaveRightChangeRight()}"                                     
-                                     valueChangeListener="#{_bean.onInheritsChange}">
-                <p:ajax update="groupRight inheritsRightName" process="@this" oncomplete="itemChange = 1;"/> 
-            </p:selectBooleanCheckbox>
-            <p:outputLabel value="#{_bean.editedItem.inheritsRightName}" id="inheritsRightName"/>
-        </h:panelGrid>
+    <p:tab title="#{bundle.Rights}" rendered="#{_bean.editedItem != null}">    
+
+        <p:selectBooleanCheckbox value="#{_bean.editedItem.inherits}" id="inherits"                                 
+                                 disabled="#{_bean.isReadOnly() || !_bean.isHaveRightChangeRight()}"
+                                 itemLabel="#{_bean.editedItem.inheritsRightName}"
+                                 valueChangeListener="#{_bean.onInheritsChange}">
+            <p:ajax update="groupRight inherits" process="@this" oncomplete="itemChange = 1;"/> 
+        </p:selectBooleanCheckbox>
 
         <h:panelGroup id="groupRight" style="font-size: 80%;">
             <ui:repeat var="state" value="#{_bean.metadatesObj.statesList}" > 
