--- a/escom-bpm-web/src/main/webapp/view/companies/company-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/companies/company-card.xhtml
@@ -33,6 +33,8 @@
                 
             </p:panelGrid>
         </p:tab>                
-
+        <p:tab title="#{bundle.RightsChilds}">
+            <ui:include src="/view/common/dict-rights-childs.xhtml"/>
+        </p:tab>
     </ui:define>
 </ui:composition>
