--- a/escom-bpm-web/src/main/webapp/view/companies/departaments/department-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/companies/departaments/department-card.xhtml
@@ -63,6 +63,8 @@
                 
             </p:panelGrid>
           </p:tab>
-
+        <p:tab title="#{bundle.RightsChilds}">
+            <ui:include src="/view/common/dict-rights-childs.xhtml"/>
+        </p:tab>
     </ui:define>
 </ui:composition>
