--- a/escom-bpm-web/src/main/webapp/view/docs/docTypes/doctype-group-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/docTypes/doctype-group-card.xhtml
@@ -24,6 +24,8 @@
                 <p:message for="name" display="icon"/>
             </p:panelGrid>
         </p:tab>                
-
+        <p:tab title="#{bundle.RightsChilds}">
+            <ui:include src="/view/common/dict-rights-childs.xhtml"/>
+        </p:tab>
     </ui:define>
 </ui:composition>
